# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-09 16:55:41 GMT	John Goerzen <jgoerzen@complete.org>	patch-56

    Summary:
      Added basic directory recursion
    Revision:
      missingh--head--0.7--patch-56


    modified files:
     ChangeLog libsrc/MissingH/Path.hs


2004-12-09 16:15:01 GMT	John Goerzen <jgoerzen@complete.org>	patch-55

    Summary:
      Added some new logging code
    Revision:
      missingh--head--0.7--patch-55


    modified files:
     ChangeLog libsrc/MissingH/Email/Parser.hs
     libsrc/MissingH/Logging/Logger.hs


2004-12-09 15:12:29 GMT	John Goerzen <jgoerzen@complete.org>	patch-54

    Summary:
      Noted new e-mail module
    Revision:
      missingh--head--0.7--patch-54


    modified files:
     ChangeLog README Setup.description debian/changelog


2004-12-09 04:02:16 GMT	John Goerzen <jgoerzen@complete.org>	patch-53

    Summary:
      More touches
    Revision:
      missingh--head--0.7--patch-53


    modified files:
     ChangeLog Makefile Setup.description


2004-12-09 03:59:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-52

    Summary:
      Finishing up initial write of the mail parser
    Revision:
      missingh--head--0.7--patch-52


    modified files:
     ChangeLog libsrc/MissingH/Email/Parser.hs

    renamed files:
     libsrc/MissingH/Email/MailParser.hs
       ==> libsrc/MissingH/Email/Parser.hs


2004-12-09 03:26:55 GMT	John Goerzen <jgoerzen@complete.org>	patch-51

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-51


    new files:
     libsrc/MissingH/Email/MailParser.hs

    modified files:
     ChangeLog Setup.description {arch}/=tagging-method


2004-12-06 18:05:56 GMT	John Goerzen <jgoerzen@complete.org>	patch-50

    Summary:
      Imported blockio 2004-11-12
    Revision:
      missingh--head--0.7--patch-50


    new files: